# MindManipulation

./: .gitignore  README.md  TEST_PLAN.md  audio_engine.py  gui.py  main_app.py  pyproject.toml  sbagen-1.4.5.tgz  sbagen-1.4.5_unzipped.tar  sbagen-1.4.5_unzipped.tar.tgz  sbagen.py  visualization.py
pysbagen/: README.md  mixer.py  parser.py  types.py
pysbagen/examples/: demo.sbg
pysbagen/generators/: base.py  isochronic.py  noise.py
pysbagen/src/pysbagen/: cli.py  drg_decoder.py  gui.py  mixer.py
pysbagen/src/pysbagen/generators/: file.py
pysbagen/tests/: conftest.py  test_generators.py  test_mixer.py  test_parser.py
sbagen-1.4.5/sbagen-1.4.5/examples/contrib/: cy-eye-refresher.sbg  cy-prana-energiser.sbg
src/pysbagen/generators/: __init__.py  binaural.py  generic.py  harmonic_box.py
